# agentic-radar

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  test-report.md  tmp.html  tmp2.html
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_issue.yaml  feature_request.yaml
.github/workflows/: ci.yaml  framework_unit_tests.yml  generate-pr-screenshots.yml  publish.yaml  release-please.yaml  security-scan.yaml
agentic_radar/: __init__.py  __main__.py  cli.py  graph.py  utils.py  version.py
agentic_radar/analysis/: __init__.py  analyze.py  ast_utils.py  utils.py
agentic_radar/analysis/autogen/: __init__.py
agentic_radar/analysis/autogen/agentchat/: __init__.py  analyze.py  graph.py  mcp.py  models.py  parse.py
agentic_radar/analysis/crewai/: __init__.py  analyze.py  crew_process.py  graph_converter.py  models.py  module_parser.py  prompt.py  tool_categories.json  tool_categorizer.py  tool_descriptions.py
agentic_radar/analysis/crewai/models/: __init__.py  agent.py  graph.py  mcp.py  tool.py
agentic_radar/analysis/crewai/parsing/: __init__.py  agents.py  crews.py  custom_tools.py  imports.py  mcp.py  predefined_tools.py  tasks.py  utils.py  variables.py  yaml_config.py
agentic_radar/analysis/langgraph/: __init__.py  agent_tracking.py  analyze.py  custom_tools.py  graph.py  mcp.py  models.py  nodes.py  predefined_tools.json  predefined_tools.py  utils.py
agentic_radar/analysis/n8n/: __init__.py  analyze.py  converter.py  models.py  n8n_node_types.json  parsing.py  visualization.py
agentic_radar/analysis/openai_agents/: __init__.py  analyze.py  exceptions.py  graph.py  models.py
agentic_radar/mapper/: __init__.py  mapper.py  vulnerabilities.json
agentic_radar/probe/: __init__.py  agent.py  oracle.py  probe.py  rich.py
agentic_radar/probe/agent_adapters/: openai_agents_agent.py
agentic_radar/probe/launchers/: base_launcher.py  openai_agents_launcher.py
agentic_radar/probe/probes/: __init__.py  fake_news_probe.py  harmful_content.py  pii_leakage.py  prompt_injection.py
agentic_radar/prompt_enhancer/: enhancer.py  pipeline.py
agentic_radar/prompt_enhancer/steps/: __init__.py  openai_generator.py
agentic_radar/prompt_hardening/: harden.py  pipeline.py
agentic_radar/prompt_hardening/steps/: __init__.py  openai_generator.py  pii_protection.py
agentic_radar/report/: __init__.py  report.py
agentic_radar/report/graph/: __init__.py  edge.py  graph.py  node.py  parse.py
agentic_radar/report/templates/: graph_improvements.html.jinja  graph_only.html.jinja  template.html.jinja
agentic_radar/test/: __init__.py  config.py  oracle.py  rich.py  test.py
agentic_radar/test/agent_adapters/: __init__.py  openai_agents_agent.py
agentic_radar/test/launchers/: __init__.py  base_launcher.py  openai_agents_launcher.py
agentic_radar/test/testers/: __init__.py  fake_news.py  harmful_content.py  pii_leakage.py  prompt_injection.py
agentic_scanner/: __init__.py  __main__.py  cli.py  graph.py  version.py
agentic_scanner/analysis/: analyze.py  brave_new_approach.ipynb  example_run.py  models.py  nodes.py  predefined_tools.py
agentic_scanner/analysis/langgraph/: analyze.py  custom_tools.py  graph.py  predefined_tools.json  predefined_tools.py  utils.py
agentic_scanner/report/: report.py
agentic_scanner/report/graph/: graph.py  parse.py
agentic_scanner/report/templates/: template.html.jinja
agentic_scanner/visualization/: __init__.py  edge.py  graph.py  node.py  parse.py
docs/: demo_report.html  project-gantt.md  testing-standards.md
docs/PRs/: PR-108-graph-only-feature-review.md  PR-109-javascript-fixes-review.md  visual-testing-workflow.md
docs/screenshots/pr-108/: README.md
examples/: graph1_hl.json  graph1_ll.json  graph2_hl.json  test_config.yaml
examples/crewai/: example1.py  job_posting.py  meeting_assistant_crew.py  stock_analysis.py
examples/crewai/mcp_1/: mcp_1.py
examples/crewai/mcp_2/: mcp_2.py
examples/crewai/mcp_3/: mcp_3.py
examples/github_workflow/: auto-agentic-radar.yaml
examples/langgraph/Gladiator2/: Dockerfile  README.md  entrypoint.sh  graph.py  requirements.txt
examples/langgraph/Gladiator2/Tools/: helper.py  (+1 more)
examples/langgraph/MCP/: mcp1.py  mcp2.py  mcp3.py
examples/langgraph/customer_service/: customer_service.py
examples/n8n/multi_agent_databse_system/: multi_agent.json
examples/n8n/simple_google_calendar_agent/: Demo__My_first_AI_Agent_in_n8n.json
pr-screenshots/: PR_COMMENT.md  view-screenshots.html
scripts/: generate-pr-screenshots.py
tests/: cli_test.py  test_cli_coverage.py  test_main_entry.py  test_pr_107_review_fixes.py  test_prompt_hardening.py  test_testing_framework.py  test_tool_categorization.py  test_visual_ux_capture.py  test_visualization_formats.py
tests/analysis/crewai/: e2e.py
tests/analysis/openai_agents/: e2e.py
tests/fixtures/: empty_graph_test.html
tests/unit_tests/: conftest.py  generate_md_report.py  test_pdf_export.py
tests/unit_tests/langgraph/: test_create_react_agent.py
tests/unit_tests/report/: __init__.py  test_graph_generation.py
(+51 files in other folders)
