[project]
name = "agentic-radar"
version = "0.11.0"
description = "A python library for generating reports for agentic systems."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

authors = [ {name = "SplxAI", email = "developers@splx.ai"} ]
maintainers = [ {name = "SplxAI", email = "developers@splx.ai"} ]

keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9"
]

dependencies = [
    "pydantic>=2.10.6",
    "typer-slim>=0.15.1",
    "jinja2 (>=3.1.5,<4.0.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "openai (>=1.73.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "rich (>=13.7.0,<14.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[project.optional-dependencies]
crewai = [
    "crewai-tools (>=0.38.1) ; python_version >= '3.10' and python_version < '3.13'"
    ]
openai-agents = ["openai-agents (>=0.0.13,<0.0.14)"]

[project.urls]
Homepage = "https://github.com/splx-ai/agentic-radar"
Source = "https://github.com/splx-ai/agentic-radar"
Tracker = "https://github.com/splx-ai/agentic-radar/issues"

[project.scripts]
agentic-radar = "agentic_radar.cli:app"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.5"
ruff = "^0.10.0"
mypy = "^1.15.0"
pytest-json-report = "^1.5.0"

[tool.ruff]
extend-exclude= ["tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
disable_error_code = ["import-untyped"] # pydot is untyped

[[tool.mypy.overrides]]
module = "openai"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[jinja-lsp]
templates="./agentic_scanner/report/templates"
backend = ["./agentic_scanner"]
lang = "python"